fixed box timing and spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -25,7 +25,7 @@ body, html {
 
 .cubeLeft-pen {
     position: absolute;
-    left: -2rem;
+    left: 200px;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -43,7 +43,7 @@ body, html {
 
 .cubeLeft-pen-2 {
     position: absolute;
-    left: -2rem;
+    left: 200px;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -63,7 +63,7 @@ body, html {
 
 .cubeRight-pen {
     position: absolute;
-    left: 0;
+    right: 200px;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -81,7 +81,7 @@ body, html {
 
 .cubeRight-pen-2 {
     position: absolute;
-    right: 0;
+    right: 200px;
     height: 100vh;
     display: flex;
     flex-direction: column;
